# nus-llama-printer

./: .env.example  .gitignore  README.md  build.sh  package-lock.json  package.json  server.js
app/: index.html  package-lock.json  package.json  vite.config.ts
app/scripts/: sync-logo.mjs
app/src/: App.tsx  vite-env.d.ts
app/src-tauri/src/: lib.rs  ssh_service.rs
app/src/components/: AnimatedBackground.tsx  LoadingSkeleton.tsx  PageBreadcrumb.tsx  PageHeader.tsx  ai-summary.tsx  app-sidebar.tsx  breadcrumb.tsx  icons.tsx  metric-card.tsx  page-header.tsx  simple-charts.tsx  theme-toggle.tsx  word-cloud.tsx
app/src/hooks/: useSSHConnection.ts
app/src/ipc/: build-commands.ts  file-commands.ts  index.ts  synctex-commands.ts  template-commands.ts  types.ts  version-commands.ts
app/src/lib/: accent-color.tsx  fluent-theme.ts  i18n.tsx  paths.ts  printer-api.ts  theme-context.tsx
app/src/pages/: HelpPage.tsx  JobsPage.tsx  ModernHomePageV2.tsx  ModernLoginPageV2.tsx  ModernPreviewPage.tsx  PrintersPage.tsx  SettingsPage.tsx
app/src/store/: printer-store.ts
app/src/styles/: globals.css
app/src/types/: authcheck.ts  printer.ts
public/: index.html  script.js  styles.css
release/: BUILD_AND_RELEASE.md
release/node.js-npm/: .gitignore  .npmignore  DEPLOYMENT.md  README.md  package.json  test_local.sh
release/node.js-npm/lib/: cli.js  config.js  downloader.js
release/python-pip/: DEPLOYMENT.md  pyproject.toml  test_local.sh
release/python-pip/vldb_toolkits/: __init__.py  __main__.py  cli.py  config.py  downloader.py
test/data/: Test Data.xlsx
(+38 files in other folders)
