[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "EasyPaper"
version = "0.1.2"
description = "Paper Management Platform for VLDB - Python wrapper for desktop application"
authors = [
    {name = "Silan Hu", email = "silan.hu@u.nus.edu"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["vldb", "paper-management", "academic", "research", "desktop-application"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Office/Business",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Qingbolan/EasyPaper"
Repository = "https://github.com/Qingbolan/EasyPaper"
Issues = "https://github.com/Qingbolan/EasyPaper/issues"

[project.scripts]
EasyPaper = "easy_paper.cli:main"
easy_paper = "easy_paper.cli:main"

[tool.setuptools]
packages = ["easy_paper"]
include-package-data = true

[tool.setuptools.package-data]
easy_paper = ["py.typed"]

[tool.setuptools.data-files]
"." = ["easy_paper.pth"]
